Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112504

QMessageLogger compilation fails with Android NDK r25 and SDK < 33

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.15.14
    • 5.15.8
    • Core: Other
    • None
    • NDK r25
    • Android
    • 1f154eec6 (tqtc/lts-5.15)

      qlogging.cpp tries to detect whether or not backtrace API exists by testing __has_include(<cxxabi.h>) && __has_include(<execinfo.h>. This condition is true in Android NDK r25 but the functions are only defined if __ANDROID_API__ >= 33, so compilation fails.

      This bug does not appear in Qt6.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            csnover C S
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes