Android: fix build error for Qt 5.15 with NDK r24+

the call backtace() used when QLOGGING_HAVE_BACKTRACE is available
only for Android API >= 33.

See https://android.googlesource.com/toolchain/prebuilts/ndk/r24/+/refs/
heads/master/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/include/
execinfo.h#52

Fixes: QTBUG-112504
Change-Id: I442042de3d21600ff364dada0c1cca133e39f305
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>